<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="291dp"
    android:layout_gravity="center"
    android:layout_height="510dp"
    android:background="#FFFFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/md_cv_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp">



        <ImageView
            android:id="@+id/iv_success_circle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="26dp"
            android:layout_marginStart="126dp"
            android:layout_marginEnd="135dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/successful" />

        <TextView
            android:id="@+id/tv_message_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="24dp"
            android:text="@string/successful_registered"
            android:textSize="12sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/iv_success_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


            <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:backgroundTint="#BDCDD6"
            android:background="#BDCDD6"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_message_success"/>

            <ImageView
                android:id="@+id/iv_image_shopping_cart"
                android:layout_width="200dp"
                android:layout_height="125dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="141dp"
                android:layout_marginBottom="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/dr_image_sale"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view1"/>


            <TextView
                android:id="@+id/tv_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_image_shopping_cart"
                android:text="@string/success_loan"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_text"
                android:textSize="12sp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name_title"/>


            <TextView
                android:id="@+id/tv_name_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail"
                android:text="category: clothes👚"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_name_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name_category"
                android:text="Price:  $  1.620"
                android:textSize="16sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:layout_marginStart="19dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>